--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
