--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "react-google-autocomplete": "^2.7.0",
     "react-image-gallery": "^1.2.11",
     "react-responsive": "^9.0.0-beta.10",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-textarea-autosize": "^8.3.4",
     "web-vitals": "^2.1.4"
   },
